--- a/src/half_horizontal.liquid
+++ b/src/half_horizontal.liquid
@@ -1,19 +1,138 @@
 <div class="view">
-  <div class="layout layout--row layout--top">
-    <div class="grid grid--cols-2 gap--medium">
-      <div class="item">
-        <div class="meta"></div>
-        <div class="content">
-          <div class="label label--medium">Half Horizontal</div>
-          <div class="description">Replace me with your content!</div>
+  <div class="layout">
+    <!-- Key Metrics -->
+    <div class="grid grid--cols-5 gap--space-between gap--medium">
+      <div class="col col--span-2">
+        <div class="grid grid--cols-2 gap--space-between gap--medium">
+          <div class="item">
+            <div class="meta"></div>
+            <div class="content">
+              <span class="value value--medium">{{ observed_level | default: '?' }}</span>
+              {% if observed_level > gauge.flood.categories.action.stage %}
+              <span class="label label--small label--inverted">⚠︎ Observed Level (ft)</span>
+              {% else %}
+              <span class="label label--small">Observed Level (ft)</span>
+              {% endif %}
+            </div>
+          </div>
+          <div class="item">
+            <div class="meta"></div>
+            <div class="content">
+              <span class="value value--medium">{{ forecast_level | default: '?' }}</span>
+              {% if observed_level > gauge.flood.categories.action.stage %}
+              <span class="label label--small label--inverted">⚠︎ Forecast Level (ft)</span>
+              {% else %}
+              <span class="label label--small">Forecast Level (ft)</span>
+              {% endif %}
+            </div>
+          </div>
+          <div class="item">
+            <div class="meta"></div>
+            <div class="content">
+              <span class="value value--medium">{{ observed_flow | default: '?' }}</span>
+              <span class="label label--small">Observed Flow (kcfs)</span>
+            </div>
+          </div>
         </div>
       </div>
+      <!-- Line Chart -->
+      <div id="{{ chart_id }}" class="col col--span-3" style="height: 300px;"></div>
     </div>
   </div>
-
+  <!-- Title Bar -->
   <div class="title_bar">
-    <img class="image" src="https://usetrmnl.com/images/brand/glyphs/glyph--black.svg" />
-    <span class="title">Plugin Template</span>
+    <img class="image" src="https://raw.githubusercontent.com/stephenyeargin/trmnl-nwps-gauges/refs/heads/main/assets/noaa.svg" />
+    <span class="title">{{ gauge.name | default: 'Unable to load gauge data' }} </span>
     <span class="instance">{{ trmnl.plugin_settings.instance_name }}</span>
   </div>
 </div>
+
+<script>
+  Highcharts.chart("{{ chart_id }}", {
+    chart: {
+      type: "line",
+      height: 200,
+      animation: false
+    },
+    title: {
+      text: null
+    },
+    xAxis: {
+      type: "datetime",
+      labels: {
+        style: {
+          fontSize: "12px",
+          color: "#000000"
+        }
+      },
+      lineWidth: 0,
+      gridLineDashStyle: "dot",
+      tickWidth: 1,
+      tickLength: 0,
+      gridLineWidth: 1,
+      gridLineColor: "#000000",
+      tickPixelInterval: 80,
+      plotLines: [{
+        color: "#121212",
+        width: 1,
+        dashStyle: "Dash",
+        value: Date.parse(now),
+        label: {
+          text: "Now",
+          align: "center",
+          style: {
+            fontSize: "10px",
+            color: "#121212"
+          }
+        }
+      }]
+    },
+    yAxis: {
+      labels: {
+        style: {
+          fontSize: "12px",
+          color: "#000000"
+        }
+      },
+      gridLineDashStyle: "solid",
+      gridLineWidth: 1,
+      gridLineColor: "#000000",
+      tickAmount: 4,
+      title: {
+        text: "Water Level (ft)",
+        style: {
+          fontSize: "12px"
+        }
+      },
+      plotLines: plotLines.map(function(line) {
+        return {
+          ...line,
+          dashStyle: "Dash"
+        };
+      })
+    },
+    plotOptions: {
+      series: {
+        animation: false,
+        lineWidth: 2
+      }
+    },
+    series: [
+      {
+        name: "Combined",
+        data: combinedData,
+        color: "black",
+        curve: true
+      }
+    ],
+    legend: {
+      enabled: false
+    },
+    tooltip: {
+      enabled: false
+    },
+    credits: {
+      enabled: false
+    }
+  });
+</script>
