--- a/src/quadrant.liquid
+++ b/src/quadrant.liquid
@@ -1,19 +1,42 @@
 <div class="view">
-  <div class="layout layout--row layout--top">
-    <div class="grid grid--cols-1 gap--medium">
+  <div class="layout">
+    <!-- Key Metrics -->
+    <div class="grid grid--cols-2 gap--medium mb--5">
       <div class="item">
         <div class="meta"></div>
         <div class="content">
-          <div class="label label--medium">Quadrant</div>
-          <div class="description">Replace me with your content!</div>
+          <span class="value value--medium">{{ observed_level | default: '?' }}</span>
+          {% if observed_level > gauge.flood.categories.action.stage %}
+          <span class="label label--small label--inverted">⚠︎ Observed Level (ft)</span>
+          {% else %}
+          <span class="label label--small">Observed Level (ft)</span>
+          {% endif %}
+        </div>
+      </div>
+      <div class="item">
+        <div class="meta"></div>
+        <div class="content">
+          <span class="value value--medium">{{ forecast_level | default: '?' }}</span>
+          {% if observed_level > gauge.flood.categories.action.stage %}
+          <span class="label label--small label--inverted">⚠︎ Forecast Level (ft)</span>
+          {% else %}
+          <span class="label label--small">Forecast Level (ft)</span>
+          {% endif %}
+        </div>
+      </div>
+      <div class="item">
+        <div class="meta"></div>
+        <div class="content">
+          <span class="value value--medium">{{ observed_flow | default: '?' }}</span>
+          <span class="label label--small">Observed Flow (kcfs)</span>
         </div>
       </div>
     </div>
   </div>
 
+  <!-- Title Bar -->
   <div class="title_bar">
-    <img class="image" src="https://usetrmnl.com/images/brand/glyphs/glyph--black.svg" />
-    <span class="title">Plugin Template</span>
-    <span class="instance">{{ trmnl.plugin_settings.instance_name }}</span>
+    <img class="image" src="https://raw.githubusercontent.com/stephenyeargin/trmnl-nwps-gauges/refs/heads/main/assets/noaa.svg" />
+    <span class="title">{{ gauge.name | default: 'Unable to load gauge data' }} </span>
   </div>
 </div>
