Add forecast flow, standardize label sizes

--- a/src/half_vertical.liquid
+++ b/src/half_vertical.liquid
@@ -7,9 +7,9 @@
         <div class="content">
           <span class="value value--medium">{{ observed_level | default: '?' }}</span>
           {% if observed_level > gauge.flood.categories.action.stage %}
-          <span class="label label--small label--inverted">⚠︎ Observed Level (ft)</span>
+          <span class="label label--small label--inverted">⚠︎ Observed Level ({{ observed_level_unit }})</span>
           {% else %}
-          <span class="label label--small">Observed Level (ft)</span>
+          <span class="label label--small">Observed Level ({{ observed_level_unit }})</span>
           {% endif %}
         </div>
       </div>
@@ -19,9 +19,9 @@
           <div class="content">
             <span class="value value--medium">{{ forecast_level | default: '?' }}</span>
             {% if observed_level > gauge.flood.categories.action.stage %}
-            <span class="label label--small label--inverted">⚠︎ Forecast Level (ft)</span>
+            <span class="label label--small label--inverted">⚠︎ Forecast Level ({{ forecast_level_unit }})</span>
             {% else %}
-            <span class="label label--small">Forecast Level (ft)</span>
+            <span class="label label--small">Forecast Level ({{ forecast_level_unit }})</span>
             {% endif %}
           </div>
         </div>
@@ -30,9 +30,18 @@
         <div class="meta"></div>
         <div class="content">
           <span class="value value--medium">{{ observed_flow | default: '?' }}</span>
-          <span class="label label--small">Observed Flow (kcfs)</span>
+          <span class="label label--small">Observed Flow ({{ observed_flow_unit }})</span>
         </div>
       </div>
+      {% if forecast_flow > 0 %}
+        <div class="item">
+          <div class="meta"></div>
+          <div class="content">
+            <span class="value value--medium">{{ forecast_flow | default: '?' }}</span>
+            <span class="label label--small">Forecasted Flow ({{ forecast_flow_unit }})</span>
+          </div>
+        </div>
+      {% endif %}
     </div>
     <!-- Line Chart -->
     <div id="{{ chart_id }}" style="width: 100%; height: 400px;"></div>
@@ -41,7 +50,7 @@
   <!-- Title Bar -->
   <div class="title_bar">
     <img class="image" src="https://raw.githubusercontent.com/stephenyeargin/trmnl-nwps-gauges/refs/heads/main/assets/noaa.svg" />
-    <span class="title">{{ gauge.name | define: 'Unable to load gauge data' }} </span>
+    <span class="title">{{ gauge.name | default: 'Unable to load gauge data' }} </span>
   </div>
 </div>
 
@@ -96,7 +105,7 @@
       gridLineColor: "#000000",
       tickAmount: 5,
       title: {
-        text: "Water Level (ft)"
+        text: "Water Level ({{ observed_level_unit }})"
       },
       plotLines: plotLines.map(function(line) {
         return {
