--- a/src/full.liquid
+++ b/src/full.liquid
@@ -1,15 +1,15 @@
 <div class="view">
   <div class="layout layout--col gap--space-between">
     <!-- Key Metrics -->
-    <div class="grid grid--cols-3 gap--medium mb--5">
+    <div class="grid grid--cols-4 gap--medium mb--5">
       <div class="item">
         <div class="meta"></div>
         <div class="content">
           <span class="value value--large">{{ observed_level | default: '?' }}</span>
           {% if observed_level > gauge.flood.categories.action.stage %}
-          <span class="label label--inverted">⚠︎ Observed Level (ft)</span>
+          <span class="label label--small label--inverted">⚠︎ Observed Level ({{ observed_level_unit }})</span>
           {% else %}
-          <span class="label">Observed Level (ft)</span>
+          <span class="label label--small">Observed Level (ft)</span>
           {% endif %}
         </div>
       </div>
@@ -19,9 +19,9 @@
           <div class="content">
             <span class="value value--large">{{ forecast_level | default: '?' }}</span>
             {% if observed_level > gauge.flood.categories.action.stage %}
-            <span class="label label--inverted">⚠︎ Forecast Level (ft)</span>
+            <span class="label label--small label--inverted">⚠︎ Forecasted Level ({{ forecast_level_unit }})</span>
             {% else %}
-            <span class="label">Forecast Level (ft)</span>
+            <span class="label label--small">Forecasted Level (ft)</span>
             {% endif %}
           </div>
         </div>
@@ -30,9 +30,18 @@
         <div class="meta"></div>
         <div class="content">
           <span class="value value--large">{{ observed_flow | default: '?' }}</span>
-          <span class="label">Observed Flow (kcfs)</span>
+          <span class="label label--small">Observed Flow ({{ observed_flow_unit }})</span>
         </div>
       </div>
+      {% if forecast_flow > 0 %}
+        <div class="item">
+          <div class="meta"></div>
+          <div class="content">
+            <span class="value value--large">{{ forecast_flow | default: '?' }}</span>
+            <span class="label label--small">Forecasted Flow ({{ forecast_flow_unit }})</span>
+          </div>
+        </div>
+      {% endif %}
     </div>
 
     <!-- Line Chart -->
@@ -98,7 +107,7 @@
       gridLineColor: "#000000",
       tickAmount: 5,
       title: {
-        text: "Water Level (ft)"
+        text: "Water Level ({{ observed_level_unit }})"
       },
       plotLines: plotLines.map(function(line) {
         return {
