--- a/src/half_horizontal.liquid
+++ b/src/half_horizontal.liquid
@@ -1,17 +1,17 @@
 <div class="view">
   <div class="layout">
     <!-- Key Metrics -->
-    <div class="grid grid--cols-5 gap--space-between gap--medium">
-      <div class="col col--span-2">
-        <div class="grid grid--cols-2 gap--space-between gap--medium">
+    <div class="grid grid--cols-4 gap--space-between gap--medium">
+      <div class="col col--span-2 col--center">
+        <div class="grid grid--cols-2 gap--medium">
           <div class="item">
             <div class="meta"></div>
             <div class="content">
               <span class="value value--medium">{{ observed_level | default: '?' }}</span>
               {% if observed_level > gauge.flood.categories.action.stage %}
-              <span class="label label--small label--inverted">⚠︎ Observed Level (ft)</span>
+              <span class="label label--small label--inverted">⚠︎ Observed Level ({{ observed_level_unit }})</span>
               {% else %}
-              <span class="label label--small">Observed Level (ft)</span>
+              <span class="label label--small">Observed Level ({{ observed_level_unit }})</span>
               {% endif %}
             </div>
           </div>
@@ -21,9 +21,9 @@
               <div class="content">
                 <span class="value value--medium">{{ forecast_level | default: '?' }}</span>
                 {% if observed_level > gauge.flood.categories.action.stage %}
-                <span class="label label--small label--inverted">⚠︎ Forecast Level (ft)</span>
+                <span class="label label--small label--inverted">⚠︎ Forecast Level ({{ forecast_level_unit }})</span>
                 {% else %}
-                <span class="label label--small">Forecast Level (ft)</span>
+                <span class="label label--small">Forecast Level ({{ forecast_level_unit }})</span>
                 {% endif %}
               </div>
             </div>
@@ -32,13 +32,22 @@
             <div class="meta"></div>
             <div class="content">
               <span class="value value--medium">{{ observed_flow | default: '?' }}</span>
-              <span class="label label--small">Observed Flow (kcfs)</span>
+              <span class="label label--small">Observed Flow ({{ observed_flow_unit }})</span>
             </div>
           </div>
+          {% if forecast_flow > 0 %}
+            <div class="item">
+              <div class="meta"></div>
+              <div class="content">
+                <span class="value value--medium">{{ forecast_flow | default: '?' }}</span>
+                <span class="label label--small">Forecasted Flow ({{ forecast_flow_unit }})</span>
+              </div>
+            </div>
+          {% endif %}
         </div>
       </div>
       <!-- Line Chart -->
-      <div id="{{ chart_id }}" class="col col--span-3" style="height: 300px;"></div>
+      <div id="{{ chart_id }}" class="col col--span-2" style="height: 300px;"></div>
     </div>
   </div>
   <!-- Title Bar -->
@@ -101,7 +110,7 @@
       gridLineColor: "#000000",
       tickAmount: 4,
       title: {
-        text: "Water Level (ft)",
+        text: "Water Level ({{ observed_level_unit }})",
         style: {
           fontSize: "12px"
         }
