Smooth out smaller fluctuations in gauge reading

--- a/src/half_horizontal.liquid
+++ b/src/half_horizontal.liquid
@@ -99,6 +99,8 @@
       }]
     },
     yAxis: {
+      min: chartMin,
+      max: chartMax,
       labels: {
         style: {
           fontSize: "12px",
