--- a/src/half_vertical.liquid
+++ b/src/half_vertical.liquid
@@ -94,6 +94,8 @@
       }]
     },
     yAxis: {
+      min: chartMin,
+      max: chartMax,
       labels: {
         style: {
           fontSize: "16px",
