--- a/src/full.liquid
+++ b/src/full.liquid
@@ -96,6 +96,8 @@
       }]
     },
     yAxis: {
+      min: chartMin,
+      max: chartMax,
       labels: {
         style: {
           fontSize: "16px",
