Show correct primary units in annotation

--- a/src/shared.liquid
+++ b/src/shared.liquid
@@ -147,7 +147,7 @@
           width: 1,
           value: stage.value,
           label: {
-            text: `${stage.name} Stage (${stage.value}")`,
+            text: `${stage.name} Stage (${stage.value} ${observedData.primaryUnits})`,
             align: "right",
             style: {
               color: "#121212"
